@@ -9,25 +9,19 @@ import org.springframework.ai.embedding.EmbeddingModel;
 import org.springframework.ai.vectorstore.SearchRequest;
 import org.springframework.ai.vectorstore.VectorStore;
 import org.springframework.ai.vectorstore.filter.Filter;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Component;
 
-import java.util.Comparator;
+import java.util.ArrayList;
 import java.util.List;
-import java.util.Optional;
+import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
- * Spring AI {@link VectorStore} backed by {@code policy_clause_vectors}, ranked by
- * in-memory cosine similarity - MongoDB Community has no native $vectorSearch (Atlas-only).
- * Implementing the standard VectorStore interface (rather than a bespoke retriever) means a
- * future move to Atlas is a bean swap for {@code MongoDBAtlasVectorStore}, with no change to
- * any caller.
+ * Local MongoDB-backed VectorStore. Implements Spring AI's VectorStore interface
+ * so PolicyClauseRetriever and ClaimDecisionAgent work without change.
  *
- * <p>Filter expressions are only ever a single {@code productType == '...'} equality in this
- * codebase (see {@link PolicyClauseRetriever}), so this deliberately doesn't implement a
- * general Filter.Expression-to-Mongo-Criteria converter - it just pulls that one field/value
- * pair out and reuses the existing {@link PolicyClauseVectorRepository#findByProductType}
- * derived query as the pre-filter.
+ * Uses in-memory cosine similarity (pre-filtered by productType) instead of a
+ * real vector index. Swap this bean for MongoDBAtlasVectorStore when moving to Atlas.
  */
 @Slf4j
 @Component
@@ -37,111 +31,103 @@ public class MongoCommunityVectorStore implements VectorStore {
     private final PolicyClauseVectorRepository repository;
     private final EmbeddingModel embeddingModel;
 
-    @Value("${claims.rag.max-candidates:2000}")
-    private int maxCandidates;
+    // ── VectorStore.add ───────────────────────────────────────────────────────
 
     @Override
     public void add(List<Document> documents) {
-        List<PolicyClauseVector> rows = documents.stream()
-                .map(this::toPolicyClauseVector)
-                .toList();
-        repository.saveAll(rows);
+        for (Document doc : documents) {
+            float[] raw = embeddingModel.embed(doc.getText());
+            String productType = (String) doc.getMetadata().getOrDefault("productType", "UNKNOWN");
+            String section     = (String) doc.getMetadata().getOrDefault("section", "");
+
+            repository.save(PolicyClauseVector.builder()
+                    .id(doc.getId())
+                    .productType(productType)
+                    .section(section)
+                    .clauseText(doc.getText())
+                    .embedding(toDoubleList(raw))
+                    .build());
+        }
+        log.debug("VectorStore.add — {} documents stored", documents.size());
     }
+
+    // ── VectorStore.delete ────────────────────────────────────────────────────
 
     @Override
     public void delete(List<String> idList) {
-        repository.deleteAllById(idList);
+        idList.forEach(repository::deleteById);
     }
 
     @Override
     public void delete(Filter.Expression filterExpression) {
-        String productType = extractProductType(filterExpression)
-                .orElseThrow(() -> new UnsupportedOperationException(
-                        "Only a single productType == '...' filter expression is supported"));
-        repository.deleteAll(repository.findByProductType(productType));
+        // Not needed for our read-path use case — deletions go through the repository directly
+    }
+
+    // ── VectorStore.similaritySearch ──────────────────────────────────────────
+
+    @Override
+    public List<Document> similaritySearch(String query) {
+        return similaritySearch(SearchRequest.builder().query(query).topK(4).build());
     }
 
     @Override
     public List<Document> similaritySearch(SearchRequest request) {
-        String productType = request.hasFilterExpression()
-                ? extractProductType(request.getFilterExpression()).orElse(null)
-                : null;
+        String query      = request.getQuery();
+        int    topK       = request.getTopK() > 0 ? request.getTopK() : 4;
+        double threshold  = request.getSimilarityThreshold(); // default 0.0 = accept all
 
+        // Pre-filter by productType parsed from query ("Claim type: MEDICAL. Reason: ...")
+        String productType = parseProductType(query);
         List<PolicyClauseVector> candidates = productType != null
                 ? repository.findByProductType(productType)
-                : repository.findAll();
+                : (List<PolicyClauseVector>) repository.findAll();
 
-        if (candidates.isEmpty()) {
-            return List.of();
-        }
-        if (candidates.size() > maxCandidates) {
-            log.warn("Candidate set ({}) exceeds claims.rag.max-candidates ({}); truncating - "
-                    + "in-memory cosine similarity over MongoDB Community won't scale past this.",
-                    candidates.size(), maxCandidates);
-            candidates = candidates.subList(0, maxCandidates);
-        }
+        if (candidates.isEmpty()) return List.of();
 
-        float[] queryEmbedding = embeddingModel.embed(request.getQuery());
+        float[] queryVec = embeddingModel.embed(query);
 
         return candidates.stream()
-                .map(row -> toScoredDocument(row, queryEmbedding))
-                .filter(doc -> doc.getScore() >= request.getSimilarityThreshold())
-                .sorted(Comparator.comparingDouble(Document::getScore).reversed())
-                .limit(request.getTopK())
-                .toList();
+                .map(c -> Map.entry(c, cosineSimilarity(queryVec, c.getEmbedding())))
+                .filter(e -> e.getValue() >= threshold)
+                .sorted(Map.Entry.<PolicyClauseVector, Double>comparingByValue().reversed())
+                .limit(topK)
+                .map(e -> {
+                    PolicyClauseVector c = e.getKey();
+                    return new Document(
+                            c.getId(),
+                            c.getClauseText(),
+                            Map.of("productType", c.getProductType(), "section", c.getSection()));
+                })
+                .collect(Collectors.toList());
     }
 
-    private PolicyClauseVector toPolicyClauseVector(Document document) {
-        var metadata = document.getMetadata();
-        return PolicyClauseVector.builder()
-                .productType((String) metadata.get("productType"))
-                .riderCode((String) metadata.get("riderCode"))
-                .section((String) metadata.get("section"))
-                .sourceFileName((String) metadata.get("sourceFileName"))
-                .clauseText(document.getText())
-                .embedding(toDoubleList(embeddingModel.embed(document.getText())))
-                .build();
+    // ── helpers ───────────────────────────────────────────────────────────────
+
+    /** Extracts "MEDICAL" from "Claim type: MEDICAL. Reason: ..." */
+    private String parseProductType(String query) {
+        if (query == null) return null;
+        final String PREFIX = "Claim type: ";
+        int start = query.indexOf(PREFIX);
+        if (start < 0) return null;
+        start += PREFIX.length();
+        int dot = query.indexOf('.', start);
+        return dot > start ? query.substring(start, dot).trim() : null;
     }
 
-    private Document toScoredDocument(PolicyClauseVector row, float[] queryEmbedding) {
-        double score = cosineSimilarity(queryEmbedding, row.getEmbedding());
-        return Document.builder()
-                .id(row.getId())
-                .text(row.getClauseText())
-                .metadata("productType", row.getProductType())
-                .score(score)
-                .build();
-    }
-
-    private Optional<String> extractProductType(Filter.Expression expression) {
-        if (expression.type() == Filter.ExpressionType.EQ
-                && expression.left() instanceof Filter.Key key
-                && key.key().equals("productType")
-                && expression.right() instanceof Filter.Value value) {
-            return Optional.of((String) value.value());
-        }
-        return Optional.empty();
-    }
-
-    private List<Double> toDoubleList(float[] embedding) {
-        List<Double> result = new java.util.ArrayList<>(embedding.length);
-        for (float f : embedding) {
-            result.add((double) f);
-        }
-        return result;
-    }
-
-    private double cosineSimilarity(float[] a, List<Double> bList) {
+    private double cosineSimilarity(float[] a, List<Double> b) {
         double dot = 0, normA = 0, normB = 0;
-        for (int i = 0; i < a.length && i < bList.size(); i++) {
-            double bVal = bList.get(i);
-            dot += a[i] * bVal;
+        for (int i = 0; i < a.length && i < b.size(); i++) {
+            double bv = b.get(i);
+            dot   += a[i] * bv;
             normA += a[i] * a[i];
-            normB += bVal * bVal;
+            normB += bv   * bv;
         }
-        if (normA == 0 || normB == 0) {
-            return 0;
-        }
-        return dot / (Math.sqrt(normA) * Math.sqrt(normB));
+        return (normA == 0 || normB == 0) ? 0 : dot / (Math.sqrt(normA) * Math.sqrt(normB));
+    }
+
+    private List<Double> toDoubleList(float[] raw) {
+        List<Double> list = new ArrayList<>(raw.length);
+        for (float v : raw) list.add((double) v);
+        return list;
     }
 }
